# dcpl-haskell

./: .gitignore  LICENSE  README  README.markdown  dcpl-haskell.cabal
solutions/appendix_a/: ex_a.1.txt  ex_a.2.lyx
solutions/chapter_01/: ex_1.1.txt  ex_1.2.txt  ex_1.3.txt
src/DCPL/: PostFixEval.hs  PostFixParser.hs
src/DCPL/AppendixA/: RelationsChecker.hs
testsuite/tests/DCPL/: Exercise_1_1.hs  PostFixEvalTest.hs  PostFixParserTest.hs
